opam-version: "2.0"
maintainer:    "anil@recoil.org"
authors:       ["Anil Madhavapeddy" "Thomas Leonard"]
homepage:      "https://github.com/mirage/mirage-net-xen"
bug-reports:   "https://github.com/mirage/mirage-net-xen/issues"
dev-repo:      "git+https://github.com/mirage/mirage-net-xen.git"
doc:           "https://mirage.github.io/mirage-net-xen/"
build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune"  {>= "1.0"}
  "cstruct" {>= "6.0.0"}
  "lwt" {>= "2.4.3"}
  "mirage-net" {>= "3.0.0"}
  "io-page" {>= "1.5.0"}
  "mirage-xen" {>= "6.0.0"}
  "netchannel" {= version}
  "lwt-dllist"
  "logs" {>= "0.5.0"}
]

tags: "org:mirage"
synopsis: "Network device for reading and writing Ethernet frames via then Xen netfront/netback protocol"
description: """
This library allows an OCaml application to read and
write Ethernet frames via the [Netfront/netback][xen-net] protocol.
"""
pin-depends:[
  [ "mirage-xen.dev" "git+https://github.com/dinosaure/mirage-xen.git#b7b5eaebead17a864b53085b60351a1648ba05b1" ]
  [ "mirage-runtime.4.0.0" "git+https://github.com/mirage/mirage.git#59101cd795e741982a0a4580c113072339e1389b" ]
  [ "functoria-runtime.4.0.0" "git+https://github.com/mirage/mirage.git#59101cd795e741982a0a4580c113072339e1389b" ]
  [ "functoria.4.0.0" "git+https://github.com/mirage/mirage.git#59101cd795e741982a0a4580c113072339e1389b" ]
]
